--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -275,12 +275,12 @@ separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-[clickme]
-full_text= 
-command=~/.i3/shutdown_menu -p rofi
-separator=true
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [clickme]
+# full_text= 
+# command=~/.i3/shutdown_menu -p rofi
+# separator=true
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Generic media player support
 #
