--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -27,7 +27,7 @@
 command=~/git/linux-setup/appconfig/i3/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
-# border=#aaaaaa
+# border=#00bfca
 # border_top=1
 # border_left=0
 # border_right=0
