--- a/doti3/config
+++ b/doti3/config
@@ -235,6 +235,7 @@ for_window [class="conky"] move to output primary
 
 # for_window [class="lazarus"] floating enable
 # for_window [class="Lazarus"] floating enable
+for_window [class="MATLAB R2015a" title="^Fig"] no_focus
 for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
 # for_window [class="MATLAB R2015a" title="^Fig"] floating enable
 for_window [class="Gazeb"] move to workspace number 8
@@ -255,7 +256,7 @@ bar {
       statusline $text_color
         background $transparent
         separator  $focused_ws_bg
-        separator  $focused_ws_bg
+        # separator  $focused_ws_bg
 
 #                           border                background          text
         focused_workspace   $focused_ws_bg        $focused_ws_bg      $transparent
@@ -268,6 +269,8 @@ bar {
 # i3bar position
   position bottom
   tray_output primary
+  # tray_output DP-4
+  # tray_output VGA-1-1
   # status_command i3status ~/.i3/my_i3status.sh
 
 }
