--- a/doti3/config
+++ b/doti3/config
@@ -463,16 +463,16 @@ bindsym $mod3+b exec --no-startup-id ~/.i3/banishMouse.sh
 bindsym $mod4+r exec ~/.i3/setKeyboard.sh
 
 
-bindsym $mod3+ctrl+shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$slow 0
-bindsym $mod3+Ctrl+shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $slow
-bindsym $mod3+Ctrl+shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$slow
-bindsym $mod3+Ctrl+shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $slow 0
+bindsym $mod3+ctrl+shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$fast 0
+bindsym $mod3+Ctrl+shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $fast
+bindsym $mod3+Ctrl+shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$fast
+bindsym $mod3+Ctrl+shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $fast 0
 
-# fast move
-bindsym $mod3+Shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$fast 0
-bindsym $mod3+Shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $fast
-bindsym $mod3+Shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$fast
-bindsym $mod3+Shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $fast 0
+# slow move
+bindsym $mod3+Shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$slow 0
+bindsym $mod3+Shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $slow
+bindsym $mod3+Shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$slow
+bindsym $mod3+Shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $slow 0
 
 bindsym $mod3+shift+z exec --no-startup-id xdotool click 1
 bindsym $mod3+shift+a exec --no-startup-id xdotool click 3
