--- a/doti3/config
+++ b/doti3/config
@@ -237,7 +237,7 @@ for_window [class="conky"] move to output primary
 # for_window [class="Lazarus"] floating enable
 for_window [class="MATLAB R2015a" title="^Fig"] no_focus
 for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
-# for_window [class="MATLAB R2015a" title="^Fig"] floating enable
+for_window [class="MATLAB R2015a" title="^Fig"] floating enable
 for_window [class="Gazeb"] move to workspace number 8
 
 for_window [window_role="browser"] move to workspace number 5
