Moved conky files to separate folder

--- a/doti3/config
+++ b/doti3/config
@@ -22,7 +22,7 @@ exec --no-startup-id cbatticon
 # exec --no-startup-id ~/mount_windata.sh
 exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
 exec_always  --no-startup-id "killall perl"
-exec_always  --no-startup-id "sleep 2; ~/.i3/conky_start"
+exec_always  --no-startup-id ~/.i3/conky/conky_start
 # exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
 
 # exec --no-startup-id ~/mount_windata.sh
