--- a/doti3/config
+++ b/doti3/config
@@ -21,9 +21,9 @@ exec --no-startup-id pa-applet
 exec --no-startup-id cbatticon
 # exec --no-startup-id ~/mount_windata.sh
 exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
-exec_always  --no-startup-id "killall perl"
 exec_always  --no-startup-id ~/.i3/conky/conky_start
-# exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
+exec_always  --no-startup-id "unclutter -idle 3 &"
+exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
 
 # exec --no-startup-id ~/mount_windata.sh
 
@@ -373,7 +373,6 @@ bindsym $mod+Ctrl+i exec urxvt -e ~/.i3/setColorScheme.sh
 
 #Printscreen
 bindsym Print exec shutter --select
-#{ Control the mouse with keyboard
 
 mode "longpress" {
 
@@ -431,27 +430,6 @@ mode "mouse" {
 }
 bindsym $mod+c mode "mouse"
 
-
-# bindkey mod2+h exec --no-startup-id "xdotool key Left; espeak /"left/""
-# bindkey mod2+j exec xdotool key Down
-# bindkey mod2+j exec --no-startup-id expeak "hey"
-# bindkey mod2+k exec --no-startup-id xdotool key Up
-# bindkey mod2+l exec --no-startup-id xdotool key Right
-
-
-#}
-# #control the mouse with keyboard
-# bindsym $mod2+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
-# bindsym $mod2+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
-# bindsym $mod2+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
-# bindsym $mod2+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
-# bindsym $mod2++shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -100 0
-# bindsym $mod2+shift++l exec --no-startup-id xdotool mousemove_relative --sync -- 100 0
-# bindsym $mod2+shift++j exec --no-startup-id xdotool mousemove_relative --sync -- 0 100
-# bindsym $mod2+shift++k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -100
-# bindsym $mod2+u exec --no-startup-id xdotool click 1
-# bindsym $mod2+i exec --no-startup-id  xdotool click 3
-# #Banish the mouse pointer to the corner of the current window - removes the distracting cursor or summons it closer for specific tasks
 
 
 set $slow 10
