--- a/doti3/dotsup/config.yaml
+++ b/doti3/dotsup/config.yaml
@@ -1,5 +1,5 @@
 ---
-:editor: "/usr/bin/vim --servername dog --cmd 'let g:user_mode=1'"
+:editor: "/usr/bin/nvim --cmd 'let g:user_mode=1'"
 :thread_by_subject: false
 :edit_signature: false
 :ask_for_from: false
