--- a/doti3/config
+++ b/doti3/config
@@ -209,7 +209,8 @@ set $background_color         #151515
 set $active_border            #005faf
 set $split_indicator          #B85335
 set $transparent              #000000dd
-exec_always --no-startup-id feh --bg-fill ~/pictures/i3_cool.png
+# exec_always --no-startup-id feh --bg-fill ~/pictures/i3_cool.png
+exec_always --no-startup-id feh --bg-fill ~/pictures/zone_cool.jpg
 for_window [class="^.*"] border pixel 2
 for_window [class="conky"] border none
 # }
@@ -246,9 +247,7 @@ for_window [window_role="browser"] move to workspace number 5
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
 bar {
-
-  status_command i3blocks -c ~/.i3/i3blocks.conf
-    i3bar_command i3bar  
+    status_command i3blocks -c ~/.i3/i3blocks.conf
     font pango: lode, FontAwesome 10
     height 25
 
