--- a/doti3/config
+++ b/doti3/config
@@ -244,6 +244,9 @@ for_window [class="Gazeb"] move to workspace number 8
 
 for_window [window_role="browser"] move to workspace number 5
 
+for_window [ title="^pdfpc - presentation" ] move to number 8
+for_window [ title="^pdfpc - presentation" ] border none floating enable
+
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
 bar {
