--- a/dottmux.conf
+++ b/dottmux.conf
@@ -56,3 +56,5 @@ bind -r C-H resize-pane -L 5
 bind -r C-J resize-pane -D 5
 bind -r C-K resize-pane -U 5
 bind -r C-L resize-pane -R 5
+
+set -g focus-events on
