--- a/doti3/qutebrowser/autoconfig.yml
+++ b/doti3/qutebrowser/autoconfig.yml
@@ -3,39 +3,5 @@
 
 config_version: 2
 settings:
-  auto_save.session:
-    global: true
-  backend:
-    global: webengine
-  bindings.commands:
-    global:
-      normal:
-        B: set-cmd-text -s :bookmark-load -t
-        J: tab-prev
-        K: tab-next
-        T: set-cmd-text -s :buffer
-        b: set-cmd-text -s :bookmark-load
-        ge: set-cmd-text :open {url:pretty}
-        gi: hint inputs
-        x: tab-close
-  content.plugins:
-    global: true
-  editor.command:
-    global:
-    - urxvt
-    - -e
-    - vim
-    - '{}'
-  hints.auto_follow:
-    global: always
-  hints.next_regexes:
-    global:
-    - \bnext\b
-    - \bmore\b
-    - \bnewer\b
-    - \b[>→≫]\b
-    - \b(>>|»)\b
-    - \bcontinue\b
-    - \bnext page\b
-  hints.scatter:
-    global: true
+  colors.webpage.bg:
+    global: '#666666'
