--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -130,11 +130,11 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 ## color=#000000 # LIGH_T COLOR_SCHEME 
 color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
-[UHK]
-interval=3600
-label=
-command=~/.i3/uhk_fuss.sh
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [UHK]
+# interval=3600
+# label=
+# command=~/.i3/uhk_fuss.sh
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
 interval=5
