--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -136,6 +136,12 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 # command=~/.i3/uhk_fuss.sh
 # color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
+[NordVPN]
+interval=30
+label=
+command=~/.i3/vpnNord.sh
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
 [load]
 interval=5
 label= 
