--- a/doti3/config
+++ b/doti3/config
@@ -20,7 +20,7 @@ exec --no-startup-id pa-applet
 # exec --no-startup-id redshift-gtk
 exec --no-startup-id cbatticon
 # exec --no-startup-id ~/mount_windata.sh
-exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
+exec_always  --no-startup-id  ~/.i3/my_autoname_workspaces.py &
 exec_always  --no-startup-id ~/.i3/conky/conky_start
 exec_always  --no-startup-id "unclutter --timeout 3 -b"
 exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
