--- a/doti3/qutebrowser/autoconfig.yml
+++ b/doti3/qutebrowser/autoconfig.yml
@@ -3,5 +3,7 @@
 
 config_version: 2
 settings:
-  scrolling.bar:
-    global: never
+  backend:
+    global: webengine
+  hints.find_implementation:
+    global: python
