Enabling flag synchronization in sup mail

--- a/doti3/dotsup/config.yaml
+++ b/doti3/dotsup/config.yaml
@@ -21,7 +21,7 @@
 :slip_rows: 0
 :col_jump: 2
 :stem_language: english
-:sync_back_to_maildir: false
+:sync_back_to_maildir: true
 :continuous_scroll: false
 :always_edit_async: false
 :accounts:
